@@ -10,8 +10,11 @@ apport (0.57) UNRELEASED; urgency=low
     Python modules. This usually happens for crashes when there is a
     dist-upgrade active and some Python packages have not been configured yet.
     (LP: #86007)
+  * apport/ui.py: If the problem report does not apply to a packaged program,
+    and we have an ExecutablePath, mention it in the error message for easier
+    debugging.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 19 Feb 2007 13:58:41 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 19 Feb 2007 14:18:37 +0100
 
 apport (0.56) feisty; urgency=low
 
